# QCVECheckReport

./: .gitignore  CMakeLists.txt  CVEReportsDB.db  CVEReportsDB.sqbpro  QCVECheckReportResources.qrc  README.md  Statistics.sql  dialogimportcvedb.cpp  dialogimportcvedb.h  dialogimportcvedb.ui  dialogimportcvereport.cpp  dialogimportcvereport.h  dialogimportcvereport.ui  html2pdfconverter.cpp  html2pdfconverter.h  jsoncvecheckreportmanager.cpp  jsoncvecheckreportmanager.h  main.cpp  mdicvedata.cpp  mdicvedata.h  mdicvedata.ui  mdipdfreport.cpp  mdipdfreport.h  mdipdfreport.ui  mdisubwindow.cpp  mdisubwindow.h  mdisubwindow.ui  mdisubwindowarea.cpp  mdisubwindowarea.h  mdisubwindowarea.ui  qcvecheckapp.cpp  qcvecheckapp.h  qcvecheckapp.ui  qsqlitemanager.cpp  qsqlitemanager.h  qsqltableview.cpp  qsqltableview.h  reportdata.cpp  reportdata.h
DAO/: abstractdao.h  cvereportdao.cpp  cvereportdao.h  issuedao.cpp  issuedao.h  nvddao.cpp  nvddao.h  packagedao.cpp  packagedao.h  packageproductdao.cpp  packageproductdao.h  productdao.cpp  productdao.h
DTO/: abstractdto.h  cvereportdto.h  issuedto.h  nvddto.h  packagedto.h  packageproductdto.h  productdto.h
Documentation/: CVSSDescription.md  DatabaseStructure.md  Index.md  QCVECheckReport.md  SoftwareArchitecture.md  SoftwareDescription.md
